# omron-subnet

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  contributing.md  cspell.json  dependabot.yml  ecosystem.config.tmpl.js  makefile  miner.config.toml  prometheus.yml  pyproject.toml  requirements.in  requirements.txt  setup.sh  sync_model_files.sh  tach.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-docker.yaml  security.yml
demos/proven_validator_reward/: example.ipynb
demos/proven_validator_reward/model/: input.json  kzg.srs  model.compiled  network.onnx  pk.key  proof.json  settings.json  vk.key  witness.json
docs/: README.md  command_line_arguments.md  competitions.md  custom_circuit_integrations.md  integration_plan.md  pm2_configuration.md  prometheus.md  running_on_mainnet.md  running_on_staging.md  running_on_testnet.md  shared_setup_steps.md  trusted_execution_environment.md  versioning.md
docs/competitions/: QUICKSTART.md  README.md
docs/notebooks/: dummy_age_detection.onnx  sn27.ipynb  sn27_ezkl.ipynb  sn27_jolt.ipynb  sn48.ipynb  sn48_ezkl.ipynb
lightning/: Cargo.toml  README.md  pyproject.toml
lightning/python/: setup.py
lightning/python/lightning/: __init__.py
lightning/src/: client.rs  connection_pool.rs  lib.rs  serialization.rs  server.rs  types.rs
neurons/: __init__.py  cli_parser.py  config.py  constants.py  dry_run.py  generate_test_input.py  incentive_mechanism.ipynb  miner.py  opentensor_demo.ipynb  protocol.py  utils.py  validator.py  wandb_logger.py
neurons/_miner/: CIRCUIT_CID  circuit_manager.py  lightning_server.py  miner_session.py  quic_server.py
neurons/_validator/: reward.py  validator_session.py
neurons/_validator/api/: __init__.py  cache.py  certificate_manager.py  websocket_manager.py
neurons/_validator/competitions/: __init__.py  base_competition.py  circuit_handler.py  competition.py  competition_manager.py
neurons/_validator/config/: __init__.py  api.py  config.py
neurons/_validator/core/: api.py  capacity_manager.py  conductor.py  prometheus.py  request.py  request_pipeline.py  response_processor.py  validator_loop.py
neurons/_validator/models/: api.py  base_rpc_request.py  completed_proof_of_weights.py  miner_response.py  poc_rpc_request.py  pow_rpc_request.py  request_type.py
neurons/_validator/pow/: proof_of_weights_handler.py
neurons/_validator/scoring/: ema_manager.py  pow_manager.py  reset_manager.py  reward.py  score_manager.py  weights.py
neurons/_validator/utils/: aioquic_transport.py  api.py  axon.py  epoch.py  hash_guard.py  logging.py  multiprocess_axon.py  pps.py  proof_of_weights.py  uid.py
neurons/deployment_layer/: circuit_store.py
neurons/deployment_layer/815d49886a610c17e34204b1c544c363bb06328a6cb126181bd0b6e77164cd4b/: metadata.toml
neurons/deployment_layer/c2493244e153e8dcb2bfa6e0ebb411b76069074041d95718c47a36f4ec637237/: metadata.toml
neurons/deployment_layer/model_0/: metadata.json  model.compiled  settings.json  vk.key
neurons/deployment_layer/model_0a92bc32ea02abe54159da70aeb541d52c3cba27c8708669eda634e096a86f8b/: input.json  metadata.json  model.compiled  settings.json  vk.key
neurons/deployment_layer/model_0d185e479d84a05e5186ebf20301ef0ff12d9defb583603215aa5297812b92e9/: input.py  metadata.json  model.compiled  settings.json  vk.key
neurons/deployment_layer/model_0f80dd9655f0c99775b1dbd1f7b5e8797a9db824c951a5d717c2e2e2f62407c8/: input.json  model.compiled  network.onnx  proof.json  settings.json  vk.key  witness.json
neurons/deployment_layer/model_1/: metadata.json  settings.json  vk.key
neurons/deployment_layer/model_1550853037e01d93c0831e2a4f80de7811b1c6780fb36b3cee89f4ba524df1be/: input.py  metadata.json  settings.json  verification_key.json
neurons/deployment_layer/model_1876cfa9fb3c418b2559f3f7074db20565b5ca7237efdd43b907d9d697a452c4/: input.py  model.compiled
neurons/deployment_layer/model_1d60d545b7c5123fd60524dcbaf57081ca7dc4a9ec36c892927a3153328d17c0/: Cargo.toml  input.py  metadata.json
neurons/deployment_layer/model_1d60d545b7c5123fd60524dcbaf57081ca7dc4a9ec36c892927a3153328d17c0/guest/: Cargo.toml
neurons/deployment_layer/model_1d60d545b7c5123fd60524dcbaf57081ca7dc4a9ec36c892927a3153328d17c0/guest/src/: lib.rs
neurons/deployment_layer/model_1d60d545b7c5123fd60524dcbaf57081ca7dc4a9ec36c892927a3153328d17c0/src/: main.rs
neurons/deployment_layer/model_1e6fcdaea58741e7248b631718dda90398a17b294480beb12ce8232e27ca3bff/: circuit.wasm  input.py  metadata.json  settings.json  verification_key.json
neurons/deployment_layer/model_215681486c2a6aa379c5b8dfb82e0317eca5085f0c40a809bfd9a687b7720a17/: metadata.json  model.compiled  settings.json
neurons/deployment_layer/model_22825c0d407161956e363b0d14d55d7d90c53706eebfa4fe9fcd839dae6a4a65/: input.py  (+3 more)
neurons/deployment_layer/model_ed8ba401d709ee31f6b9272163c71451da171c7d71800313fe5db58d0f6c483a/: Cargo.toml  metadata.json
neurons/deployment_layer/model_ed8ba401d709ee31f6b9272163c71451da171c7d71800313fe5db58d0f6c483a/guest/: Cargo.toml
neurons/deployment_layer/model_ed8ba401d709ee31f6b9272163c71451da171c7d71800313fe5db58d0f6c483a/src/: lib.rs  main.rs
neurons/execution_layer/: TEEModelSession.py  VerifiedModelSession.py  base_input.py  circuit.py  circuit_metadata.py  generic_input.py  input_registry.py  session_storage.py  verified_model_session.py
neurons/scripts/: check_miner_axon.py  circuitize_reward.py  create_competition_circuit.py  plot_model_stats.py  sign_api_request.py  test_certificate_pinning.py  upload_circuit.py  verify_ssl.py  verify_validator_proof.py
neurons/utils/: __init__.py  auto_update.py  epoch.py  gc_logging.py  lightning_dendrite.py  metrics_logger.py  mp_dendrite.py  pre_flight.py  rate_limiter.py  shuffle.py  system.py  wandb_logger.py
neurons/utils/lightning/: Cargo.toml  __init__.py  pyproject.toml
neurons/utils/lightning/src/: lib.rs
tests/e2e_tests/: conftest.py  test_emissions.py  test_miner.py  test_validator.py
(+207 files in other folders)
