[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omron"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "attrs==24.3.0",
  "bittensor==8.5.2",
  "ezkl==18.1.5",
  "fastapi==0.110.3",
  "jsonrpcserver>=5.0.9",
  "numpy==2.0.2",
  "packaging==24.2",
  "prometheus_client==0.21.1",
  "psutil==6.1.1",
  "pydantic==2.10.6",
  "pyopenssl>=25.0.0",
  "requests==2.32.3",
  "rich==13.8.1",
  "torch==2.4.1",
  "uvicorn==0.34.0",
  "wandb==0.18.7",
]

[tool.setuptools]
packages = ["omron"]
package-dir = { "omron" = "neurons" }

[tool.setuptools.dynamic]
version = { attr = "omron.__version__" }

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["black>=24.10.0"]
