[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

[lib]
name = "lightning"
crate-type = ["cdylib"]

[dependencies]
# QUIC dependencies disabled for initial build
# quinn = "0.10"
# rustls = "0.21"
# rustls-pemfile = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
hex = "0.4"

# Networking
socket2 = "0.5"

[build-dependencies]
pyo3-build-config = "0.20"
