[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

[lib]
name = "lightning"
crate-type = ["cdylib"]

[dependencies]
# Real QUIC networking
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
rcgen = "0.12"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
serde_json = "1.0"

# Utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
hex = "0.4"

# Cryptography for signature verification
ed25519-dalek = "1.0"
bs58 = "0.4"
sha2 = "0.10"
rand = "0.7"
sp-core = "21.0"

# Networking
socket2 = "0.5"

[build-dependencies]
pyo3-build-config = "0.20"
