[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lightning"
version = "0.1.0"
description = "Lightning-fast QUIC client for Bittensor - Rust implementation with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Omron Team" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
module-name = "lightning"
features = ["pyo3/extension-module"]
bindings = "pyo3"
