[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

[lib]
name = "lightning"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
pyo3-build-config = "0.22"
