[package]
name = "guest"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev = "5eb488381d383034ea1dd558011da0055c5b0c55" }
serde = { version = "1.0.209", default-features = false }
serde-big-array = "0.5.1"
libm = "0.2.8"
